# anomaly-neuroai

./: .gitignore  README.md  main.py  neuroai_industrial_roadmap_and_stage2_checklist.md  pyproject.toml
configs/: cloud_train.yaml  local_debug.yaml  local_train.yaml  mvtec_padim.yaml  mvtec_padim_local.yaml  mvtec_patchcore.yaml  mvtec_patchcore_local.yaml
demo/: app.py  app_mvtec.py
src/: __init__.py
src/data/: __init__.py  anomaly_transforms.py  datasets.py  loaders.py  mvtec.py
src/inference/: __init__.py  latency_benchmark.py  predict_anomaly.py
src/models/: __init__.py  build_model.py  mlp.py  padim_wrapper.py  patchcore_wrapper.py  snn.py
src/training/: __init__.py  eval.py  metrics.py  train.py  train_anomaly.py
src/utils/: __init__.py  config.py  device.py
src/visualization/: __init__.py  plot_metrics.py  save_anomaly_maps.py
tests/: test_mvtec_dataset.py  test_smoke.py  test_wrappers_smoke.py
